--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         style="width: 100%"
     >
 </div>
+</script>
 
 </head>
 <body>
@@ -194,7 +195,7 @@ bgMusic.addEventListener('ended', () => {
         style="width: 100%"
     >
 </div>
-
+<script src="script.js"></script>
 <script>
     // Control volum
     document.getElementById('volumeControl').addEventListener('input', function(e) {
