--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
 
 <script src="script.js"></script>
     
-// Monitorizare evenimente audio<script>
+// Monitorizare evenimente audio
 // Varianta 100% funcțională (cu debug inclus)
-const bgMusic = document.getElementById('bgMusic');
+<script>
+    const bgMusic = document.getElementById('bgMusic');
 const musicToggle = document.getElementById('musicToggle');
 
 // Inițializare
