--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <script src="script.js"></script>
     
 // Monitorizare evenimente audio
-// Varianta 100% funcțională (cu debug inclus)
+Varianta 100% funcțională (cu debug inclus)// 
 <script>
     const bgMusic = document.getElementById('bgMusic');
 const musicToggle = document.getElementById('musicToggle');
