--- a/index.html
+++ b/index.html
@@ -134,21 +134,18 @@
         </div>
     </div>
 </div>
+<button id="musicToggle" 
+        style="margin-top: 10px; padding: 8px 15px; background: #f44336; color: white; border: none; border-radius: 20px; cursor: pointer;"
+        onclick="
+            const audio = document.getElementById('bgMusic');
+            audio.paused ? audio.play() : audio.pause();
+            this.textContent = audio.paused ? '🔇 OFF' : '🔊 ON';
+            this.style.background = audio.paused ? '#f44336' : '#4CAF50';
+        ">🔇 OFF</button>
+
+<audio id="bgMusic" loop src="audio/Peter_Green.mp3"></audio>
 
 
-    
 
-
-<audio id="bgMusic" loop>
-    <source src="audio/Peter_Green.mp3" type="audio/mpeg">
-    Browser-ul tău nu suportă audio HTML5.
-  </audio>
-  <script>
-    // Pornește muzica după primul click pe pagină
-    document.addEventListener('click', function() {
-      const music = document.getElementById('bgMusic');
-      music.play().catch(e => console.log("Nu se poate reda:", e));
-    }, { once: true }); // 'once: true' = ascultă doar primul click
-  </script>
 </body>
 </html>
