--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparație Imagini</title>
+    <title>Comparație Imagini - Aliniere Stânga</title>
 
 <style>
         /* Container principal aliniat la stânga */
@@ -107,15 +107,44 @@
 }
 
     </style>
+   <style>
+        #musicToggle {
+            position: fixed; bottom: 20px; right: 20px;
+            padding: 12px; background: #4CAF50; color: white;
+            border: none; border-radius: 50px; cursor: pointer;
+        }
+    </style>
 
-
+<div style="position: absolute; left: 20px; bottom: 60px; width: 80%; z-index: 1000;">
+    <input 
+        type="range" 
+        id="volumeControl" 
+        min="0" 
+        max="1" 
+        step="0.1" 
+        value="0.3"
+        style="width: 100%"
+    >
+</div>
 
 </head>
 <body>
-    
-
-
-
+<button id="musicToggle" style="
+    margin-top: 10px;
+    padding: 8px 15px;
+    background: #f44336;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+">🔇 OFF</button>
+<audio id="bgMusic" loop src="audio/Peter_Green.mp3"></audio>
+<script>
+    // Control volum
+    document.getElementById('volumeControl').addEventListener('input', function(e) {
+        bgMusic.volume = e.target.value;
+    });
+</script>
 <!-- Container principal acum aliniat la stânga -->
 <div class="twentytwenty-container">
     <div class="twentytwenty-before-container">
@@ -134,8 +163,105 @@
         </div>
     </div>
 </div>
+<script>
+// Varianta 100% funcțională (cu debug inclus)
+const bgMusic = document.getElementById('bgMusic');
+const musicToggle = document.getElementById('musicToggle');
 
+// Inițializare
+bgMusic.volume = 0.3; // Setează volum mai mic
+let wasPlaying = false;
+
+// Butonul principal
+musicToggle.addEventListener('click', function() {
+    console.log("Stare înainte de click:", bgMusic.paused ? "pausat" : "redare");
+    
+    if (bgMusic.paused) {
+        bgMusic.play()
+            .then(() => {
+                musicToggle.textContent = '🔊 ON';
+                musicToggle.style.background = '#4CAF50';
+                wasPlaying = true;
+            })
+            .catch(e => {
+                console.error("Eroare play():", e);
+                alert("Browserul necesită un click în pagină pentru a porni muzica!");
+            });
+    } else {
+        bgMusic.pause();
+        musicToggle.textContent = '🔇 OFF'; 
+        musicToggle.style.background = '#f44336';
+        wasPlaying = false;
+    } 
+    console.log("Stare după click:", bgMusic.paused ? "pausat" : "redare");
+});
+
+
+
+
+
+
+<audio id="bgMusic" loop src="audio/Peter_Green.mp3"></audio>
+
+
+
+
+
+// Monitorizare evenimente audio
+bgMusic.addEventListener('play', () => console.log("Muzica a început"));
+bgMusic.addEventListener('pause', () => console.log("Muzica oprită"));
+bgMusic.addEventListener('ended', () => {
+    musicToggle.textContent = '🔇 OFF';
+    console.log("Muzica s-a terminat natural");
+});
+<div style="position: absolute; left: 20px; bottom: 60px; width: 80%; z-index: 1000;">
+    <input 
+        type="range" 
+        id="volumeControl" 
+        min="0" 
+        max="1" 
+        step="0.1" 
+        value="0.3"
+        style="width: 100%"
+    >
+</div>
+
+<script>
+    // Control volum
+    document.getElementById('volumeControl').addEventListener('input', function(e) {
+        bgMusic.volume = e.target.value;
+    });
+</script>
+
+</script>
 <script src="script.js"></script>
+<script>
+const bgMusic = document.getElementById('bgMusic');
+const musicToggle = document.getElementById('musicToggle');
+const volumeControl = document.getElementById('volumeControl');
 
+// Buton ON/OFF
+musicToggle.addEventListener('click', () => {
+    if (bgMusic.paused) {
+        bgMusic.play();
+        musicToggle.textContent = '🔊 ON';
+        musicToggle.style.background = '#4CAF50'; // Verde
+    } else {
+        bgMusic.pause();
+        musicToggle.textContent = '🔇 OFF';
+        musicToggle.style.background = '#f44336'; // Roșu
+    }
+});
+
+// Volum
+volumeControl.addEventListener('input', () => {
+    bgMusic.volume = volumeControl.value;
+});
+
+// Permite redarea la primul click pe pagină
+document.addEventListener('click', () => {
+    bgMusic.volume = 0.5;
+}, { once: true });
+</script>
 </body>
 </html>
