--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         }
     </style>
 
-<div style="position: absolute; left: 20px; bottom: -50px; width: 80%; z-index: 1000;">
+<div style="position: absolute; left: 20px; bottom: -20px; width: 60px; z-index: 1000;">
     <input 
         type="range" 
         id="volumeControl" 
