--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparație Imagini - Aliniere Stânga</title>
+    <title>Comparație Imagini
+    </title>
 
 <style>
         /* Container principal aliniat la stânga */
