--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         }
     </style>
 
-<div style="position: absolute; left: 20px; bottom: -20px; width: 60px; z-index: 1000;">
+<div style="position: absolute; left: 20px; bottom: -20px; width: 80%; z-index: 1000;">
     <input 
         type="range" 
         id="volumeControl" 
@@ -215,7 +215,7 @@ bgMusic.addEventListener('ended', () => {
     musicToggle.textContent = '🔇 OFF';
     console.log("Muzica s-a terminat natural");
 });
-<div style="position: absolute; left: 20px; bottom: -20px; width: 60px; z-index: 1000;">
+<div style="position: absolute; left: 20px; bottom: -20px; width: 80%; z-index: 1000;">
     <input 
         type="range" 
         id="volumeControl" 
