--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1990 vs 2025</title>
+
+
+    
     <style>
         /* Stiluri generale (desktop + mobil) */
         #musicControls {
@@ -36,7 +44,7 @@
     </style>
 
 <style>
-        /* Container principal aliniat la stânga */
+        /* Container principal */
         .twentytwenty-container {
             width: 800px;
             height: 600px;
@@ -139,7 +147,7 @@
 </head>
 <body>
    
- <!-- Containerul tău cu imagini -->
+ <!-- Containerul -->
 
 <!-- Container principal acum aliniat la stânga -->
 <div class="twentytwenty-container">
