--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     width: 25px;
     height: 22px;
     font-size: 12px;
+align-items: center;
 }
 
 #musicToggle:hover {
@@ -39,6 +40,7 @@
     -webkit-appearance: none;
     height: 3px;
     background: rgba(0, 0, 0, 0.1);
+    align-items: center;
 }
 
 #volumeControl::-webkit-slider-thumb {
