--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ align-items: center;
 
  <!-- Buton + Volum (sub imagine) -->
     <div id="musicControls">
-        <button id="musicToggle">🔇</button>
+        <button id="musicToggle">ON</button>
         <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="0.5">
     </div>
 <script src="script.js"></script>
