--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparație Imagini - Aliniere Stânga</title>
+    <title>1990 vs 1990+35</title>
 
 
 <style>
@@ -58,6 +58,7 @@ align-items: center;
             #musicToggle {
                 padding: 12px 12px;
                 font-size: 14px;
+            align-items: center;
             }
             #volumeControl {
                 width: 80px;
