--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
  <!-- Buton + Volum (sub imagine) -->
     <div id="musicControls">
-        <button id="musicToggle">ON</button>
+        <button id="musicToggle">🔊</button>
         <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="0.5">
     </div>
 <script src="script.js"></script>
