--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
 
-  <div class="twenty-wrapper">
-    <div class="twentytwenty-container">
-      <div class="twentytwenty-before-container">
-        <div class="twentytwenty-before">
-          <img src="img/colaj1.jpg" alt="Before">
-        </div>
-      </div>
-      <div class="twentytwenty-after">
-        <img src="img/colaj2.jpg" alt="After">
-      </div>
+<div class="twentytwenty-container">
+  <div class="twentytwenty-before-container">
+    <div class="twentytwenty-before">
+      <img src="img/colaj1.jpg" alt="Before">
+    </div>
+  </div>
+  <div class="twentytwenty-after">
+    <img src="img/colaj2.jpg" alt="After">
+  </div>
+  <div class="twentytwenty-handle">...</div>
+</div> 
+
+      
       <div class="twentytwenty-handle">
         <div class="handle-line"></div>
         <div class="handle-arrows">
