--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>Comparație Imagini</title>
-
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TwentyTwenty Image Comparison</title>
+    <!-- Am corectat căile către fișierele CSS -->
+    <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-<div class="twentytwenty-container">
-  <div class="twentytwenty-before-container">
-    <div class="twentytwenty-before">
-      <img src="img/colaj1.jpg" alt="Before">
-    </div>
-  </div>
-  <div class="twentytwenty-after">
-    <img src="img/colaj2.jpg" alt="After">
-  </div>
-  <div class="twentytwenty-handle">...</div>
-</div> 
+    <!-- Wrapper NOU care conține atât imaginile, cât și controalele audio -->
+    <div class="main-container">
 
-      
-      <div class="twentytwenty-handle">
-        <div class="handle-line"></div>
-        <div class="handle-arrows">
-          <div class="handle-arrow left"></div>
-          <div class="handle-arrow right"></div>
+        <!-- Containerul pentru imagini (codul tău original) -->
+        <div class="twentytwenty-container">
+            <!-- Am corectat căile către imagini -->
+            <img src="images/original.jpg" />
+            <img src="images/prelucrat.jpg" />
         </div>
-      </div>
+
+        <!-- Container NOU pentru controalele audio -->
+        <div class="audio-controls">
+            <button id="play-pause-btn" class="play-btn"></button>
+            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
+        </div>
+
     </div>
 
-    <div class="controls">
-      <button id="musicToggle">🔇</button>
-      <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="0.3">
-    </div>
-  </div>
+    <!-- Am corectat căile către fișierele JavaScript -->
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <!-- Scriptul tău personal, redenumit pentru claritate -->
+    <script src="js/main.js"></script> 
 
-  <audio id="bgMusic" loop src="audio/Peter_Green.mp3"></audio>
-
-  <script src="js/script.js"></script>
 </body>
 </html>
