--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!-- Containerul pentru imagini (codul tău original) -->
         <div class="twentytwenty-container">
             <!-- Am corectat căile către imagini -->
-            <img src="images/original.jpg" />
-            <img src="images/prelucrat.jpg" />
+            <img src="img/colaj1original.jpg" />
+            <img src="img/cvolaj2.jpg" />
         </div>
 
         <!-- Container NOU pentru controalele audio -->
