--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
     </div>
 
-    <!-- Am corectat căile către fișierele JavaScript -->
+   <!-- AICI E PROBLEMA, APROAPE SIGUR. VERIFICĂM CĂILE -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/jquery.event.move.js"></script>
     <script src="js/jquery.twentytwenty.js"></script>
-    <!-- Scriptul tău personal, redenumit pentru claritate -->
     <script src="js/main.js"></script> 
 
 </body>
